syntax = "proto3";

package eadp.cadie.ingressserver.v1;

import "eadp/cadie/shared/v1/download_count.proto";

option java_multiple_files = true;
option java_package = "eadp.cadie.ingressserver.v1";
option java_outer_classname = "AddDownloadCountsProto";

message BatchAddDownloadCountsRequest {
  repeated eadp.cadie.shared.v1.DownloadCount downloads = 1;
}

message BatchAddDownloadCountsResponse {
  uint64 event_time = 1;
}