syntax = "proto3";

package eadp.cadie.shared.v1;

option java_multiple_files = true;
option java_package = "eadp.cadie.shared.v1";
option java_outer_classname = "DownloadCountProto";

message DownloadCount {
  string content_id = 1;
  string player_id = 2;
  uint64 download_timestamp = 3;
  uint32 count = 4;
  string download_type = 5;
}