syntax = "proto3";

package eadp.cadie.shared.storageinterface.v1;

import "eadp/cadie/shared/storageinterface/v1/asset_identifier.proto";

option java_multiple_files = true;
option java_package = "eadp.cadie.shared.storageinterface.v1";
option java_outer_classname = "AssetUploadProto";

message AssetUpload {
  AssetIdentifier identifier = 1; //The real ID unique among all assets in the binary storage service
  string upload_url = 2;
  string asset_id = 3; // The asset-id from BinaryStorageAssetCreation so the requester knows what asset_id has what reql identifier as provided by the Binary Storage Service
  uint64 timestamp = 4; //Used as chronological versioning (the most recent prevails) and provided when sending a notification to CADIE
}