syntax = "proto3";

package eadp.cadie.ingressserver.v1;

import "eadp/cadie/shared/v1/rating.proto";

option java_multiple_files = true;
option java_package = "eadp.cadie.ingressserver.v1";
option java_outer_classname = "AddRatingsProto";

message BatchAddRatingsRequest {
  repeated eadp.cadie.shared.v1.Ratings ratings = 1;
}

message BatchAddRatingsResponse {
  uint64 event_time = 1;
}